# agentkit-samples

./: .pre-commit-config.yaml
02-use-cases/beginner/: README.md  pyproject.toml
02-use-cases/beginner/a2a_simple/: .veadk-ignore  README.md  agent.py  local_client.py  pyproject.toml  readme.md
02-use-cases/beginner/a2a_simple/remote/: agent.py
02-use-cases/beginner/a2a_simple/remote/tools/: check_prime.py  roll_die.py
02-use-cases/beginner/callback/: README.md  agent.py  pyproject.toml
02-use-cases/beginner/callback/callbacks/: after_agent_callback.py  after_model_callback.py  after_tool_callback.py  before_agent_callback.py  before_model_callback.py  before_tool_callback.py
02-use-cases/beginner/callback/tools/: write_article.py
02-use-cases/beginner/episode_generation/: README.md  agent.py  pyproject.toml  requirements.txt
02-use-cases/beginner/hello_world/: README.md  agent.py
02-use-cases/beginner/mcp_simple/: README.md  agent.py  client.py  pyproject.toml  requirements.txt
02-use-cases/beginner/multi_agents/: README.md  agent.py
02-use-cases/beginner/realtime_voice/: agent.py
02-use-cases/beginner/restaurant_ordering/: README.md  agent.py
02-use-cases/beginner/travel_concierge/: README.md
02-use-cases/beginner/vikingdb/: README.md  agent.py  pyproject.toml
02-use-cases/beginner/vikingmem/: README.md  agent.py  local_test.py  pyproject.toml
02-use-cases/content_safety/: README.md  agent.py
02-use-cases/data_analysis_with_code/: README.md
02-use-cases/data_analysis_with_datalake/: README.md  agent.py
(+4 files in other folders)
