[project]
name = "agentkit-beginner-examples"
version = "0.1.0"
description = "AgentKit beginner examples collection with all dependencies"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core dependencies for all examples
    "veadk-python[extensions]>=0.2.28",
    "agentkit-sdk-python>=0.1.13",
    "google-adk>=1.18.0,<1.20.0",

    # Additional dependencies for compatibility
    "urllib3<2.0.0",
    "volcengine-python-sdk>=4.0.31",
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
